kubernetes/django-clearsessions.yml
apiVersion: v1
kind: Pod
metadata:
  name: django-clearsessions
  labels:
    app.kubernetes.io/name: django-app
    app.kubernetes.io/instance: django-py
    app.kubernetes.io/component: cron
    app.kubernetes.io/part-of: k8s-test-django
    app.kubernetes.io/managed-by: kubectl
spec:
  restartPolicy: Never
  containers:
    - name: clearsessions
      image: django_app
      imagePullPolicy: IfNotPresent
      command: ["python", "manage.py", "clearsessions"]
