kubernetes/django-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deploy
  labels:
    name: django-app
    instance: django-py
    version: "1.0"
    component: web
    part-of: k8s-test-django
    managed-by: kubectl
spec:
  replicas: 2
  selector:
    matchLabels:
      name: django-app
      instance: django-py
      component: web
  template:
    metadata:
      labels:
        name: django-app
        instance: django-py
        version: "1.0"
        component: web
        part-of: k8s-test-django
        managed-by: kubectl
    spec:
      containers:
        - name : django-py
          image: django_app
          imagePullPolicy: IfNotPresent
