kubernetes/django-service.yml
apiVersion: v1
kind: Service
metadata:
  name: django
  labels:
    name: django-app
    instance: django-py
    component: web
    part-of: k8s-test-django
    managed-by: kubectl
spec:
  type: ClusterIP
  selector:
    name: django-app
    instance: django-py
    component: web
  ports:
    - port: 80
