kubernetes/django-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django
  annotations: 
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: star-burger.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django
                port: 
                  number: 80
